# adventofcode-2025

./: .gitignore  01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  README.md  _.py  pyproject.toml
