[project]
name = "2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aoc",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
  "ruff>=0.8.0"
]

[tool.uv.sources]
aoc = { path = "../aoc", editable = true }
